--- a/packages/moonstone/styles/variables.less
+++ b/packages/moonstone/styles/variables.less
@@ -318,10 +318,10 @@
 
 
 @moon-video-player-title-size:                     48px;
-@moon-video-player-transport-slider-knob-size:     24px;
-@moon-video-player-transport-slider-height:        9px;
-@moon-video-player-transport-slider-tap-area:      81px;
-@moon-video-player-knob-v-offset:                  (@moon-video-player-transport-slider-knob-size - (@moon-video-player-transport-slider-height / 2));
+@moon-video-player-slider-knob-size:               24px;
+@moon-video-player-slider-height:                  9px;
+@moon-video-player-slider-tap-area:                81px;
+@moon-video-player-knob-v-offset:                  (@moon-video-player-slider-knob-size - (@moon-video-player-slider-height / 2));
 @moon-video-player-badge-text-size:                24px;
 @moon-video-player-side-padding:                   60px;
 @moon-video-player-bottom-padding:                 30px;
